--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Free Skokov Website Template | Home :: w3layouts</title>
+<title>Template</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href='http://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
@@ -556,7 +556,7 @@ $(window).load(function() {
 	 <div class="footer-bottom">
 	 	<div class="wrap">
 		 	<div class="copy">
-			     <p class="copy">© 2013 Template by <a href="http://w3layouts.com" target="_blank">w3layouts</a></p>
+			     <p class="copy">© 2013 </a></p>
 		    </div>
 		 	<div class="footer-nav">
 		 		<ul>
